NormalVersionWithLogger/src/main/java/com/example/rabam/error/PackageReadException.java
package com.example.rabam.error;

public class PackageReadException extends RuntimeException{
    public PackageReadException() {
        super("Packet didn't read!");
    }
}
